# rapidtextprep

./: LICENSE  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docs.yml  publish.yml
benchmarks/: benchmark_pipeline.py
docs/: api-reference.md  function-reference.md  index.md  installation.md  parallel-processing.md  quickstart.md  sklearn-pipeline.md  user-guide.md
docs/functions/: cleaning.md  configuration.md  extraction.md  features.md  frequency.md  lemmatization.md  normalization.md  pipeline.md  stopwords.md  transformers.md
src/rapidtextprep/: __init__.py  _patterns.py  _resources.py  _typing.py  cleaning.py  config.py  extraction.py  features.py  frequency.py  lemmatization.py  normalization.py  pipeline.py  stopwords.py  transformers.py
src/rapidtextprep/data/: __init__.py  english_contractions_mapping_updated.json  social_media_abbreviations_mapping.json
tests/: test_cleaning.py  test_features.py  test_normalization.py  test_pipeline.py  test_public_api.py  test_transformers.py
