[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapidtextprep"
version = "0.1.1"
description = "Fast pandas-friendly text preprocessing utilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "spacy",
  "spacy-lookups-data",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rapidtextprep"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/rapidtextprep",
  "/tests",
  "/benchmarks",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
