[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapidtextprep"
version = "0.2.0"
description = "Fast pandas-friendly text preprocessing utilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "joblib",
  "flashtext",
  "scikit-learn",
  "spacy",
  "spacy-lookups-data",
]

[dependency-groups]
dev = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rapidtextprep"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/rapidtextprep",
  "/tests",
  "/benchmarks",
  "/docs",
  "/LICENSE",
  "/mkdocs.yml",
  "/README.md",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
